//
// Protocol buffers definition for DADI-GSTORE server
//
syntax = "proto3";


message WriteSlaveRequest {
  string partitionId = 1;
  string objectId = 2;
  string objectValue = 3;
  int32 timestamp = 4;
}

message WriteSlaveResponse {
}

message HeartbeatRequest {
  string partitionId = 1;
}

message HeartbeatResponse {
	//empty
}

message VoteRequest {
	//empty
}

message VoteResponse{
	bool res = 1;
}

message ObjectInfo {
  string objectId = 2;
  string objectValue = 3;
  int32 timestamp = 4;
}

message InformLeaderPartitionRequest {
	string newMasterUrl = 1;
	string serverId = 2;
	string partitionId = 3;
	repeated ObjectInfo objectInfo = 4;
}

message InformLeaderPartitionResponse {
	repeated ObjectInfo objectInfo = 1;
}

message InformLeaderRequest {
}

message InformLeaderResponse {
}

service AdvancedSlaveService {
	rpc WriteSlave(WriteSlaveRequest) returns (WriteSlaveResponse);
	rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
	rpc AskVote(VoteRequest) returns (VoteResponse);
	rpc InformLeaderPartition(InformLeaderPartitionRequest) returns (InformLeaderPartitionResponse);
	rpc InformLeader(InformLeaderRequest) returns (InformLeaderResponse);
}